--- a/hyprland.conf
+++ b/hyprland.conf
@@ -1,32 +1,10 @@
-##################
-##### IMPORT #####
-##################
+##############
+### IMPORT ###
+##############
 
-source = config.d/monitor.conf
-
-###################
-### MY PROGRAMS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-
-# Set programs that you use
-$terminal = kitty
-$fileManager = dolphin
-$menu = wofi --show drun
-
-
-#################
-### AUTOSTART ###
-#################
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-
+source = config.d/monitors.conf
+source = config.d/variables.conf
+source = config.d/autostart.conf
 
 #############################
 ### ENVIRONMENT VARIABLES ###
