--- a/hyprland.conf
+++ b/hyprland.conf
@@ -2,9 +2,9 @@
 ### IMPORT ###
 ##############
 
-source = config.d/monitors.conf
-source = config.d/variables.conf
-source = config.d/autostart.conf
+source = monitors.conf
+source = variables.conf
+source = autostart.conf
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -170,8 +170,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod, Del, exit,
-bind = $mainMod, F, exec, $fileManager
+bind = $mainMod, Delete, exit,
+bind = $mainMod SHIFT, F, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, Space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
